syntax = "proto3";

package example;

service UserService {
  rpc GetUserById(UserIdRequest) returns (UserResponse);
  rpc CreateUser(UserRequest) returns (UserResponse);
  rpc UpdateUser(UserRequest) returns (UserResponse);
  rpc DeleteUser(UserIdRequest) returns (Empty);
}

message UserIdRequest {
  string id = 1;
}

message UserRequest {
  string id = 1;
  string name = 2;
}

message UserResponse {
  string id = 1;
  string name = 2;
}

message Empty {}
